# mylocale

./: .gitignore  README.md  create.py  new.py  pyproject.toml
doc/: index.rst
docs/: conf.py
examples/: example.py  localisation.csv  new.py
mylocale/: TR.py  __init__.py  create.py  localisation.csv  read.py
src/mylocale/: TR.py  __init__.py
