[tool.poetry]
name = "mylocale"
version = "2025.1.1"
description = "A simple python library for simple localisation wit CSV files."
license = "MIT"
authors = ["tct123 <42028373+tct123@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/tct123/mylocale"
homepage = "https://github.com/tct123/mylocale"
documentation = "https://mylocale.readthedocs.io"


[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mylocale_create = 'mylocale.create:main'
