[project]
name = "mylocale"
version = "2025.7.4"
description = "A simple python library for simple localisation wit CSV files."
license = "MIT"
authors = [
    { name = "tct123", email = "42028373+tct123@users.noreply.github.com" },
]
readme = "README.md"
urls = { repository = "https://github.com/tct123/mylocale", homepage = "https://github.com/tct123/mylocale", documentation = "https://mylocale.readthedocs.io" }

requires-python = ">=3.8"
dependencies = []

[tool.poetry]
packages = [{ include = "mylocale", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mylocale_create = 'mylocale.create:main'
